client/src/utilities/ScreenHeading/ScreenHeading.css
.heading-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin: 0 0 50px 0;
}

.screen-heading {
    font-size: 32px;
    color: rgba(160, 160, 160, 0.643)    ;
    font-family: "Poppins Bold";
}

.screen-sub-heading {
    letter-spacing: 3px;
    margin: 10px 0 18px 0;
    font-size: 12px;
    color: rgb(154, 154, 154);
    
}

.heading-separator {
    display: flex;
    align-items: center;
    position: relative;
    width: 180px;
    margin: 10px 0 0 0;
}

.separator-line {
    display: flex;
    width: 100%;
    height: 3px;
    background-color: rgb(213, 213, 215);
    align-items: center;
}

.separator-blob {
    height: 10px;
    width: 100%;
    position: absolute;
    display: flex;
    justify-content: center;
}

.separator-blob div {
    width: 55px;
    border-radius: 10px;
    background-color: #d7d7d9f7;

}

